--- a/notebooks/load_and_clean_data.ipynb
+++ b/notebooks/load_and_clean_data.ipynb
@@ -13,106 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import packages\n",
-    "import pandas as pd\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_data(path_to_file, sample = 5):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Load a csv file into a dataframe and display a brief overview of the first 5 rows.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    if not os.path.exists(path_to_file):\n",
-    "        raise FileNotFoundError(f\"The file '{path_to_file}' does not exist.\")\n",
-    "    \n",
-    "    # Load client data into a datafram\n",
-    "    df = pd.read_csv(path_to_file)\n",
-    "    \n",
-    "    # Display for a brief overview\n",
-    "    display(df.head(sample))\n",
-    "    display(df.info())\n",
-    "\n",
-    "    return df\n",
-    "\n",
-    "def clean_datatype(df, float_columns = None, int_columns = None, str_columns = None, date_columns = None, bool_columns = None):\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    Converts specified columns in the dataframe to the desired data types. \n",
-    "    \n",
-    "    Requirement: \n",
-    "    - No missing values\n",
-    "    \n",
-    "    Parameters:\n",
-    "    - float_columns: List of column names to convert to float\n",
-    "    - int_columns: List of column names to convert to int\n",
-    "    - str_columns: List of column names to convert to string\n",
-    "    - date_columns: List of column names to convert to datetime\n",
-    "    - bool_columns: List of column names containing boolean-like strings ('t', 'true', 'f', 'false') to convert to int\n",
-    "    \n",
-    "    Returns:\n",
-    "    - Dataframe with updated column types\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Default empty lists if no list is provided\n",
-    "    int_columns = int_columns or []\n",
-    "    str_columns = str_columns or []\n",
-    "    date_columns = date_columns or []\n",
-    "    bool_columns = bool_columns or []\n",
-    "    \n",
-    "    if float_columns:\n",
-    "        for col in float_columns:\n",
-    "            df[col] = df[col].astype(float)\n",
-    "\n",
-    "    if int_columns:\n",
-    "        for col in int_columns:\n",
-    "            df[col] = df[col].astype(int)\n",
-    "    \n",
-    "    if str_columns:\n",
-    "        for col in str_columns:\n",
-    "            df[col] = df[col].astype(str)\n",
-    "    \n",
-    "    if date_columns:\n",
-    "        for col in date_columns:\n",
-    "            df[col] = pd.to_datetime(df[col]) \n",
-    "            # Adjust the datetime conversion here if the format looks different\n",
-    "    \n",
-    "    if bool_columns:\n",
-    "        # Convert true and false to integer\n",
-    "        for col in bool_columns:\n",
-    "            df[col] = df[col].apply(lambda x: 1 if str(x).lower() in ['t', 'true'] else 0)\n",
-    "\n",
-    "    return df\n",
-    "\n",
-    "def clean_channel_sales(df):\n",
-    "\n",
-    "    \"\"\"\n",
-    "    Converts unconvenient sales channel names to integer dummies with respect to their frequency\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Remove rows belonging to channels with value counts below 20 can be removed because they don't have much impact on the final model\n",
-    "    valid_channels = df.channel_sales.value_counts()[df.channel_sales.value_counts() > 20].index\n",
-    "    df = df[df.channel_sales.isin(valid_channels)]\n",
-    "\n",
-    "    # Rename remaining channels for simplicity according to their rank in frequency\n",
-    "    frequency_map = df.channel_sales.value_counts().rank(method='dense', ascending=False).astype(int) - 1\n",
-    "    df.loc[:, 'channel_sales'] = df.channel_sales.map(frequency_map)\n",
-    "                                                            \n",
-    "    return df"
+    "from functions import load_data, clean_channel_sales, clean_datatype"
    ]
   },
   {
@@ -124,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -336,66 +237,20 @@
        "[5 rows x 26 columns]"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 14606 entries, 0 to 14605\n",
-      "Data columns (total 26 columns):\n",
-      " #   Column                          Non-Null Count  Dtype  \n",
-      "---  ------                          --------------  -----  \n",
-      " 0   id                              14606 non-null  object \n",
-      " 1   channel_sales                   14606 non-null  object \n",
-      " 2   cons_12m                        14606 non-null  int64  \n",
-      " 3   cons_gas_12m                    14606 non-null  int64  \n",
-      " 4   cons_last_month                 14606 non-null  int64  \n",
-      " 5   date_activ                      14606 non-null  object \n",
-      " 6   date_end                        14606 non-null  object \n",
-      " 7   date_modif_prod                 14606 non-null  object \n",
-      " 8   date_renewal                    14606 non-null  object \n",
-      " 9   forecast_cons_12m               14606 non-null  float64\n",
-      " 10  forecast_cons_year              14606 non-null  int64  \n",
-      " 11  forecast_discount_energy        14606 non-null  float64\n",
-      " 12  forecast_meter_rent_12m         14606 non-null  float64\n",
-      " 13  forecast_price_energy_off_peak  14606 non-null  float64\n",
-      " 14  forecast_price_energy_peak      14606 non-null  float64\n",
-      " 15  forecast_price_pow_off_peak     14606 non-null  float64\n",
-      " 16  has_gas                         14606 non-null  object \n",
-      " 17  imp_cons                        14606 non-null  float64\n",
-      " 18  margin_gross_pow_ele            14606 non-null  float64\n",
-      " 19  margin_net_pow_ele              14606 non-null  float64\n",
-      " 20  nb_prod_act                     14606 non-null  int64  \n",
-      " 21  net_margin                      14606 non-null  float64\n",
-      " 22  num_years_antig                 14606 non-null  int64  \n",
-      " 23  origin_up                       14606 non-null  object \n",
-      " 24  pow_max                         14606 non-null  float64\n",
-      " 25  churn                           14606 non-null  int64  \n",
-      "dtypes: float64(11), int64(7), object(8)\n",
-      "memory usage: 2.9+ MB\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the data\n",
-    "client_df = load_data('../data/raw/client_data.csv')"
+    "client_df = load_data('../data/raw/client_data.csv')\n",
+    "client_df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -596,48 +451,20 @@
        "4                 0.0  "
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 193002 entries, 0 to 193001\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column              Non-Null Count   Dtype  \n",
-      "---  ------              --------------   -----  \n",
-      " 0   id                  193002 non-null  object \n",
-      " 1   price_date          193002 non-null  object \n",
-      " 2   price_off_peak_var  193002 non-null  float64\n",
-      " 3   price_peak_var      193002 non-null  float64\n",
-      " 4   price_mid_peak_var  193002 non-null  float64\n",
-      " 5   price_off_peak_fix  193002 non-null  float64\n",
-      " 6   price_peak_fix      193002 non-null  float64\n",
-      " 7   price_mid_peak_fix  193002 non-null  float64\n",
-      "dtypes: float64(6), object(2)\n",
-      "memory usage: 11.8+ MB\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the data\n",
-    "price_df = load_data('../data/raw/price_data.csv')"
+    "price_df = load_data('../data/raw/price_data.csv')\n",
+    "price_df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +623,7 @@
        "4                 0.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
